[package]
name = "crc-0x8810"
version = "0.1.0"
edition = "2021"
description = "Very efficient, table-free, byte-by-byte 0x8810/0x1021 crc polynomial application"
license = "OSL-3.0"

[dependencies]

[dev-dependencies]
crc = "2"
crc-any = "2"
rand_pcg = "0.3"
rand_core = "0.6"
criterion = "0.3"
proptest = "1"
assert_hex = "0.2"
rand = "0.8"
once_cell = "1"

[[bench]]
name = "compare"
harness = false
